# streamleads

./: .coveragerc  .editorconfig  .env.example  .env.prod.example  .env.staging.example  .gitignore  .pre-commit-config.yaml  .pylintrc  Dockerfile  Makefile  README-DEPLOY.md  README.md  alembic.ini  docker-compose.portainer.yml  docker-compose.prod.yml  docker-compose.staging.yml  docker-compose.yml  mypy.ini  portainer-stack-template.json  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.cfg
.github/workflows/: ci-cd.yml  ci.yml
alembic/: env.py
app/: config.py  database.py  main.py
app/api/: leads.py
app/models/: lead.py
app/repositories/: lead_repository.py
app/schemas/: lead.py
app/services/: automation.py  scoring.py
dashboard/: main.py
docs/: configuration.md
documentacao/: api.md  arquitetura.md  deploy-github.md  deploy-producao.md  instalacao-plataformas.md  instalacao-portainer.md  integracoes-externas.md  scoring-automacoes.md  testes-desenvolvimento.md
scripts/: backup.sh  deploy.sh  init_db.py  setup-github.ps1  setup-github.sh  setup-portainer.ps1  setup-portainer.sh
